canary/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-rollout-analysis
  labels:
    app: rollouts
    "backstage.io/kubernetes-id": canary-rollout-analysis
    app.kubernetes.io/instance: canary-rollout-analysis
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-rollout-analysis
      "backstage.io/kubernetes-id": canary-rollout-analysis
      app.kubernetes.io/instance: canary-rollout-analysis
  template:
    metadata:
      labels:
        app: canary-rollout-analysis
        "backstage.io/kubernetes-id": canary-rollout-analysis
        app.kubernetes.io/instance: canary-rollout-analysis
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:yellow
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: { duration: 5}
        - setWeight: 50
        # An AnalysisTemplate is referenced at the second step, which starts an AnalysisRun after
        # the setWeight step. The rollout will not progress to the following step until the
        # AnalysisRun is complete. A failure/error of the analysis will cause the rollout's update to
        # abort, and set the canary weight to zero.
        - analysis:
            templates:
              - templateName: random-fail
              - templateName: always-pass
