canary/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  label: 
    'backstage.io/kubernetes-id': canary-rollout-analysis
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
