canary/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-rollout-analysis
  labels:
    "backstage.io/kubernetes-id": canary-rollout-analysis
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-rollout-analysis
