canary/canary-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: canary-rollout-analysis
  labels:
    app.kubernetes.io/instance: canary-rollout-analysis
spec:
  host: canary-rollout-analysis-openshift-gitops.apps.lprabhu-160920241028.devcluster.openshift.com
  to:
    kind: Service
    name: canary-rollout-analysis
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
